--- a/TR.SimpleHttpServer/TR.SimpleHttpServer.csproj
+++ b/TR.SimpleHttpServer/TR.SimpleHttpServer.csproj
@@ -17,6 +17,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="System.Net.WebSockets" Version="4.3.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<None Include="README.md" Pack="true" PackagePath="/"/>
 	</ItemGroup>
 
