--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,23 +5,26 @@ on:
     branches:
       - main
     paths:
-      - 'TR.SimpleHttpServer/TR.SimpleHttpServer.csproj'
+      - "TR.SimpleHttpServer/TR.SimpleHttpServer.csproj"
 
 env:
-  DOTNET_VERSION: '8.0.x'
-  PROJECT_PATH: 'TR.SimpleHttpServer/TR.SimpleHttpServer.csproj'
+  DOTNET_VERSION: "10.0.x"
+  PROJECT_PATH: "TR.SimpleHttpServer/TR.SimpleHttpServer.csproj"
 
 jobs:
-  release:
+  check-version:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    outputs:
+      version: ${{ steps.get_version.outputs.version }}
+      tag: ${{ steps.get_version.outputs.tag }}
+      should-release: ${{ steps.check_tag.outputs.should-release }}
 
     steps:
-      - name: Checkout repository
+      - name: Checkout csproj file
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          sparse-checkout: ${{ env.PROJECT_PATH }}
+          sparse-checkout-cone-mode: false
 
       - name: Extract version from csproj
         id: get_version
@@ -32,40 +35,50 @@ jobs:
 
       - name: Check if tag exists
         id: check_tag
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          if git rev-parse "refs/tags/${{ steps.get_version.outputs.tag }}" >/dev/null 2>&1; then
-            echo "exists=true" >> "$GITHUB_OUTPUT"
+          if gh release view "v${{ steps.get_version.outputs.version }}" >/dev/null 2>&1; then
+            echo "should-release=false" >> "$GITHUB_OUTPUT"
           else
-            echo "exists=false" >> "$GITHUB_OUTPUT"
+            echo "should-release=true" >> "$GITHUB_OUTPUT"
           fi
 
+  build-and-release:
+    needs: check-version
+    if: needs.check-version.outputs.should-release == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Setup .NET
-        if: steps.check_tag.outputs.exists == 'false'
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: Build and Pack
-        if: steps.check_tag.outputs.exists == 'false'
         run: |
           dotnet restore
           dotnet build --configuration Release --no-restore
           dotnet pack ${{ env.PROJECT_PATH }} --configuration Release --no-build --output ./nupkg
 
       - name: Create Tag
-        if: steps.check_tag.outputs.exists == 'false'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag ${{ steps.get_version.outputs.tag }}
-          git push origin ${{ steps.get_version.outputs.tag }}
+          git tag ${{ needs.check-version.outputs.tag }}
+          git push origin ${{ needs.check-version.outputs.tag }}
 
       - name: Create GitHub Release
-        if: steps.check_tag.outputs.exists == 'false'
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ steps.get_version.outputs.tag }}
-          name: Release ${{ steps.get_version.outputs.tag }}
-          draft: true
-          generate_release_notes: true
-          files: ./nupkg/*.nupkg
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create ${{ needs.check-version.outputs.tag }} \
+            --title "Release ${{ needs.check-version.outputs.tag }}" \
+            --draft \
+            --generate-notes \
+            ./nupkg/*.nupkg
